--- a/sass/style.scss
+++ b/sass/style.scss
@@ -25,7 +25,8 @@ body {
   font-size: 16px;
   line-height: 1.7;
   cursor: pointer;
-   background-color: rgb(220, 241, 143); 
+   background-color: rgb(220, 241, 143);
+   
   
 }
 
@@ -90,6 +91,7 @@ body {
 
   .active {
     font-weight: bold;
+    color: #ff0066;
   }
 }
 
@@ -126,7 +128,6 @@ body {
 .post-tags {
   display: flex;
  
-
   p {
     margin: 0 10px 0 0;
   }
@@ -143,7 +144,7 @@ body {
   } 
   100% {
       opacity: 1;
-      color: rgb(13, 40, 13);
+      color: #010101;
       line-height: 1.8;
       transform: scale(1.1);
   }
