Add styles to project

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -27,6 +27,7 @@ body {
   cursor: pointer;
    background-color: rgb(220, 241, 143);
    
+   
   
 }
 
@@ -91,7 +92,9 @@ body {
 
   .active {
     font-weight: bold;
-    color: #ff0066;
+    color: #BB2649;
+    font-weight: bold;
+    font-size: 22px;
   }
 }
 
